fixed footer covering up bottom plugs

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -20,9 +20,11 @@
 .footer-links-container {
     display: flex;
     justify-content: space-between;
-    margin-right: 80px;
     width: 100px;
     font-size: 40px;
+    position: absolute;
+    bottom: 10px;
+    right: 80px;
 }
 
 .github-link,
